--- a/take-a-seat/src/css/HomePage.css
+++ b/take-a-seat/src/css/HomePage.css
@@ -9,6 +9,7 @@
 .site-main-body {    
   margin: 3rem auto 0 auto;    
   width: 70%;
+  min-height: 50rem;
   /* border: 1px solid red; */
 }
 
@@ -35,4 +36,68 @@
 .landing-img {
   width: 100%;
   max-width: 50rem;
+}
+
+.seat-component {
+  height: 2.5rem;
+  width: 2.5rem;
+  padding: 0;
+}
+
+.seat-tooltip {
+  width: 5rem;
+  height: 1.7rem;
+  margin-top: -1rem;
+}
+
+.seat-rows {
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 4rem;
+  background-color: rgba(41, 40, 40, 0.477);
+  border-radius: 5px;
+  margin: 0.2rem 0 0.2rem 0;
+}
+
+.show-detail-panel {
+  margin: 1rem 0 1rem 0;
+}
+
+.event-description {
+  margin-top: -0.5rem;
+}
+
+.show-details-text-descr {
+  font-size: 0.75rem;
+  color: grey;
+  margin-bottom: -2rem;
+}
+
+.show-detail-event-div {
+  width: 100%;
+  height: auto;
+}
+
+.show-detail-event-image {
+  width: 100%;
+  height: auto;
+}
+
+.scene-comp {
+  width: 100%;
+  height: 3rem;
+  margin-bottom: 1rem;
+  border-radius: 5px;
+}
+
+.scene-comp-descr {
+  margin-top: -0.7rem;
+  text-align: center;
+}
+
+.add-seat-form {
+  width: 100%;
+  height: 4rem;
+  
 }
