--- a/take-a-seat/src/css/HomePage.css
+++ b/take-a-seat/src/css/HomePage.css
@@ -152,3 +152,23 @@
 .l-log-comp {
   padding: 0rem;
 }
+
+.seat-reservation-remove-button{
+  width: 2rem;
+  height: 2rem;
+  font-weight: 600;
+  justify-content: center;
+  align-items: center;
+  background-color: red;
+  border: 1px solid red;
+  border-radius: 15px;
+  padding: 0;
+}
+
+.margin-lr {
+  margin: 0 3rem 0 3rem;
+}
+
+.div-full-width {
+  width: 800px;
+}
